--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,11 @@
     padding: 0;
 }
 body{
-    background-color: #FFF5FA;
-    user-select: none;
+    background-image: url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 :root{
     @media screen and (max-width: 700px) {
@@ -18,7 +21,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
 }
 .content-box{
     border: 2px solid black;
@@ -156,6 +158,7 @@ input[type="radio"] {
     font-weight: 600;
     text-align: center;
     padding: 10px;
+    border: 5px solid black;
     border-radius: 20px;
     visibility: hidden;
 }
