--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+    user-select: none;
 }
 :root{
     @media screen and (max-width: 700px) {
@@ -23,10 +27,13 @@ body{
     align-items: center;
 }
 .content-box{
-    border: 2px solid black;
+    border: 3px solid black;
     padding: 10px 100px;
     text-align: center;
     background-color: #66CCFF;
+    box-shadow: 5px 5px 0 #66CCFF,
+                inset 5px 5px 0 #e0dfd7;
+    border-radius: 35px;
 }
 #start-heading{
     margin-bottom: 20px;
@@ -39,6 +46,7 @@ body{
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width: 300px;
     cursor: pointer;
 }
@@ -57,15 +65,18 @@ body{
     align-items: center;
 }
 .content-box-quiz-screen{
-    border: 2px solid black;
+    border: 3px solid black;
     width: clamp(50px, 80%, 820px);
     font-size: 2rem;
     padding: 10px 20px;
     background-color: #66CCFF;
+    box-shadow: 5px 5px 0 #66CCFF,
+                inset 5px 5px 0 #e0dfd7;
+    border-radius: 35px;
 }
 .header{
     display: flex;
-    margin: 0 0 60px 0;
+    margin: 0 0 50px 0;
     font-size: 2.3rem;
     font-weight: 700;
 }
@@ -83,6 +94,7 @@ body{
     box-shadow: 3px 3px 0;
     position: relative;
     font-size: 1.5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 4px 25px;
     cursor: pointer;
 }
@@ -95,6 +107,7 @@ body{
     padding: 10px;
     background-color: #FFD54F;
     border-radius: 15px;
+    box-shadow: 5px 5px 0 black;
 }
 .choice-opt{
     margin-left: 15px;
@@ -115,11 +128,14 @@ input[type="radio"] {
     align-items: center;
 }
 .result-box-quiz-screen{
-    border: 2px solid black;
-    width: clamp(50px, 80%, 820px);
+    border: 3px solid black;
+    width: clamp(50px, 80%, 900px);
     font-size: 2rem;
     padding: 10px 20px;
     background-color: #66CCFF;
+    box-shadow: 5px 5px 0 #66CCFF,
+                inset 5px 5px 0 #e0dfd7;
+    border-radius: 35px;
 }
 .result-header{
     font-size: 3rem;
@@ -136,6 +152,7 @@ input[type="radio"] {
 .res-btn button{
     background-color: pink;
     box-shadow: 3px 3px 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
@@ -148,7 +165,7 @@ input[type="radio"] {
 }
 
 .toast{
-    background-color: hsl(0, 100%, 70%);
+    background-color: #ff8a05;
     width: 300px;
     position: fixed;
     top: 10px;
@@ -158,9 +175,12 @@ input[type="radio"] {
     font-weight: 600;
     text-align: center;
     padding: 10px;
-    border: 5px solid black;
+    border: 3px solid black;
+    box-shadow: 3px 3px 0 #ff8a05,
+                inset 3px 3px 0 #e0dfd7;
     border-radius: 20px;
-    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1s ease;
 }
 
 /* Highscore Screen */
@@ -173,11 +193,14 @@ input[type="radio"] {
     align-items: center;
 }
 .highscore-box-quiz-screen{
-    border: 2px solid black;
+    border: 3px solid black;
     width: clamp(50px, 80%, 820px);
     font-size: 2rem;
     padding: 10px 20px;
     background-color: #66CCFF;
+    box-shadow: 5px 5px 0 #66CCFF,
+                inset 5px 5px 0 #e0dfd7;
+    border-radius: 35px;
 }
 #highscore-header{
     font-size: 3rem;
@@ -205,6 +228,7 @@ input[type="radio"] {
 .bottom-option button{
     background-color: pink;
     box-shadow: 3px 3px 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
