--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,9 @@ body{
     border-radius: 15px;
     box-shadow: 5px 5px 0 black;
 }
+.choices{
+    margin-left: 10px;
+}
 .choice-opt{
     margin-left: 15px;
     cursor: pointer;
@@ -116,6 +119,14 @@ body{
 input[type="radio"] {
   transform: scale(1.5);   /* increase to 1.5x size */
   cursor: pointer;
+}
+.insta-ans{
+    background-color: #fa8d21;
+    border-radius: 30px;
+    text-align: center;
+    width: 235px;
+    border: 3px solid black;
+    visibility: hidden;
 }
 
 /* Result Screen */
@@ -141,6 +152,7 @@ input[type="radio"] {
     font-size: 3rem;
     text-align: center;
     margin-bottom: 25px;
+    text-decoration: underline;
 }
 .result-box-quiz-screen button{
     font-size: 1.5rem;
@@ -205,7 +217,8 @@ input[type="radio"] {
 #highscore-header{
     font-size: 3rem;
     text-align: center;
-    margin-bottom: 25px;    
+    margin-bottom: 25px;   
+    text-decoration: underline; 
 }
 .rank-header{
     font-size: 2.5rem;
