--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ body{
 }
 .header{
     display: flex;
-    margin: 0 0 50px 0;
+    margin: 15px 0 35px 0;
     font-size: 2.3rem;
     font-weight: 700;
 }
