--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,31 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
     user-select: none;
+}  
+
+:root {
+  font-size: 16px;
 }
-:root{
-    @media screen and (max-width: 700px) {
-        font-size: 11px;
-    }
-}   
+
+@media (max-width: 1000px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 700px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 500px) {
+  :root {
+    font-size: 10px;
+  }
+}
+
+/* Start Screen */
 .start-screen{
     height: 100vh;
     width: 100vw;
@@ -34,6 +53,7 @@ body{
     box-shadow: 5px 5px 0 #66CCFF,
                 inset 5px 5px 0 #e0dfd7;
     border-radius: 35px;
+    width: clamp(50px, 80%, 400px);
 }
 #start-heading{
     margin-bottom: 20px;
@@ -47,7 +67,7 @@ body{
     padding: 20px;
     font-size: 1.5rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 300px;
+    width: 100%;
     cursor: pointer;
 }
 .start-btn:active{
