--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 body{
     background-image: url(../images/background.jpg);
@@ -10,7 +11,7 @@ body{
     background-position: center;
     background-size: cover;
 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
 
     user-select: none;
 }  
@@ -34,6 +35,12 @@ body{
 @media (max-width: 500px) {
   :root {
     font-size: 10px;
+  }
+}
+@media (orientation: portrait) {
+  body {
+    background-image: url(../images/background_potrait.jpg);
+    overflow: hidden;
   }
 }
 
@@ -66,7 +73,7 @@ body{
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
     width: 100%;
     cursor: pointer;
 }
@@ -114,7 +121,7 @@ body{
     box-shadow: 3px 3px 0;
     position: relative;
     font-size: 1.5rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
     padding: 4px 25px;
     cursor: pointer;
 }
@@ -149,6 +156,11 @@ input[type="radio"] {
     width: 235px;
     border: 3px solid black;
     visibility: hidden;
+}
+@media (max-width: 700px) {
+  .insta-ans{
+    width: 150px;
+  }
 }
 
 /* Result Screen */
@@ -186,7 +198,7 @@ input[type="radio"] {
 .res-btn button{
     background-color: pink;
     box-shadow: 3px 3px 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
@@ -263,7 +275,7 @@ input[type="radio"] {
 .bottom-option button{
     background-color: pink;
     box-shadow: 3px 3px 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
     margin: 30px 0;
     padding: 20px;
     font-size: 1.5rem;
