--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body{
     box-shadow: 5px 5px 0 #66CCFF,
                 inset 5px 5px 0 #e0dfd7;
     border-radius: 35px;
-    width: clamp(50px, 80%, 400px);
+    width: clamp(50px, 40%, 400px);
 }
 #start-heading{
     margin-bottom: 20px;
@@ -76,6 +76,11 @@ body{
     font-family: 'Franklin Gothic Medium', 'Oswald', 'Arial Narrow', Arial, sans-serif;
     width: 100%;
     cursor: pointer;
+}
+@media (max-width: 910px) {
+  .start-btn{
+    font-size: 2rem;
+  }
 }
 .start-btn:active{
     box-shadow: none;
@@ -106,6 +111,11 @@ body{
     margin: 15px 0 35px 0;
     font-size: 2.3rem;
     font-weight: 700;
+}
+@media (max-width: 700px) {
+  .header{
+    font-size: 2rem;
+  }
 }
 .timer{
     margin-left: auto;
@@ -208,6 +218,15 @@ input[type="radio"] {
 .res-btn button:active{
     box-shadow: none;
     transform: translate(3px, 3px);
+}
+.nameInput{
+    display: inline-block;
+    width: 60%;
+  }
+@media (max-width: 910px) {
+  .nameInput{
+    width: 80%;
+  }
 }
 
 .toast{
